tests/baselines/reference/moduleWithNoValuesAsType.errors.txt
tests/cases/compiler/moduleWithNoValuesAsType.ts(2,8): error TS2708: Cannot use namespace 'A' as a value here because it has no value export.
tests/cases/compiler/moduleWithNoValuesAsType.ts(7,8): error TS2708: Cannot use namespace 'B' as a value here because it has no value export.
tests/cases/compiler/moduleWithNoValuesAsType.ts(15,8): error TS2708: Cannot use namespace 'C' as a value here because it has no value export.


==== tests/cases/compiler/moduleWithNoValuesAsType.ts (3 errors) ====
    module A { }
    var a: A; // error
           ~
!!! error TS2708: Cannot use namespace 'A' as a value here because it has no value export.
    
    module B {
        interface I {}
    }
    var b: B; // error
           ~
!!! error TS2708: Cannot use namespace 'B' as a value here because it has no value export.
    
    module C {
        module M {
            interface I {}
        }
    }
    
    var c: C; // error
           ~
!!! error TS2708: Cannot use namespace 'C' as a value here because it has no value export.